--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,7 @@
 		<br /><br /><br /><br />
 
 		<!-- FOOTER -->
-
+		{{> footer}}
 		<div class="footer">
 			<div class="container-1">
 				<img
